🎨 テンプレートを用意

--- a/contents/template/sketch.html
+++ b/contents/template/sketch.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/css/style.css" rel="stylesheet" />
-    <link href="/css/reset.css" rel="stylesheet" />
+    <link href="../../css/reset.css" rel="stylesheet" />
+    <link href="../../css/style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
-    <script src="/js/for.js"></script>
-    <title>テク単 | for文</title>
+    <script src="sketch.js"></script>
+    <title>テク単 | テンプレ</title>
   </head>
   <body>
-    <h1>Hello, for loop!</h1>
+    <div id="canvas"></div>
+    <pre>
+      <code>
+        print(Hello, tech-tan!)
+      </code>
+    </pre>
   </body>
 </html>
