✨ 再生ボタンを追加

--- a/contents/template/sketch.html
+++ b/contents/template/sketch.html
@@ -27,6 +27,9 @@
       <button type="button" onclick="handleReload()">
         <i class="fa-solid fa-rotate-right"></i>
       </button>
+      <button type="button" onclick="handlePlay()">
+        <i class="fa-solid fa-play"></i>
+      </button>
     </div>
 
     <script>
