💄 template を再度編集

--- a/contents/template/sketch.html
+++ b/contents/template/sketch.html
@@ -1,3 +1,9 @@
+<!-- 
+  step.1 Change the title.
+  step.2 Write sample code.
+  step.3 Sketch with p5.js!
+-->
+
 <!DOCTYPE html>
 <html lang="ja">
   <head>
