✨ コードを動的に挿入できるようにした

--- a/contents/template/sketch.html
+++ b/contents/template/sketch.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div id="canvas"></div>
-    <pre><code class="python">print(Hello, tech-tan!)</code></pre>
+    <pre><code class="python"></code></pre>
 
     <div class="bottom-bar">
       <button type="button" onclick="handleReload()">
@@ -37,9 +37,5 @@
         <i class="fa-solid fa-play"></i>
       </button>
     </div>
-
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
   </body>
 </html>
