--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  padding-bottom: 4em;
+  padding-top: 4.5em;
+  font-family: "Sawarabi Gothic", sans-serif;
 }
 
 #canvas {
@@ -18,17 +19,32 @@ code {
   font-size: 1.2em;
 }
 
-.bottom-bar {
+.top-bar {
   background-color: #066292;
+  top: 0;
+  padding: 0.6em 1em;
+  position: absolute;
+  color: white;
+  font-size: 1.5em;
+  width: 100%;
+  height: 3em;
+  line-height: 1.8em;
+}
+
+/* .sub-title {
+  font-size: 0.8em;
+} */
+
+.bottom-bar {
   bottom: 0;
-  padding: 0.6em;
+  padding: 1em 1.5em;
   position: fixed;
   text-align: end;
   width: 100%;
 }
 
 .bottom-bar button {
-  background-color: #01507a;
+  background-color: #066292;
   border-radius: 0.2em;
   display: inline-block;
   font-size: 2em;
