--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   padding-top: 4.5em;
-  font-family: "M PLUS 1p", sans-serif;
+  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体",
+    "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
 }
 
 #canvas {
