--- a/contents/print/sketch.css
+++ b/contents/print/sketch.css
@@ -19,6 +19,10 @@ textarea {
   border-radius: 0.2em;
 }
 
+.form input[type="text"]::placeholder {
+  opacity: 0.5;
+}
+
 .form button {
   background-color: #066292;
   padding: 8px;
