--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   padding-top: 4.5em;
   font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体",
     "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+  color: "#222222";
 }
 
 #canvas {
