--- a/contents/plusequal/sketch.css
+++ b/contents/plusequal/sketch.css
@@ -6,6 +6,8 @@
   width: 100%;
   display: flex;
   position: absolute;
+  padding: 1em;
+  gap: 0.5em;
   bottom: 0;
   text-align: center;
 }
@@ -24,10 +26,19 @@
   opacity: 0.5;
 }
 
-.enemy-hp {
+.desc-container {
   position: absolute;
   top: 0;
-  width: 100%;
-  background-color: #22222200;
+  border: 2px solid white;
+  border-radius: 0.4em;
+  margin: 1em;
+  padding: 1em;
+  background-color: #222222;
   font-size: large;
+  color: white;
 }
+
+/* .enemy-hp,
+.enemy-name {
+    
+} */
