--- a/contents/remainder/sketch.css
+++ b/contents/remainder/sketch.css
@@ -5,12 +5,12 @@
 #canvas button {
   position: absolute;
   padding: 1em;
-  top: 50%;
+  top: 52%;
   left: 50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #066292;
+  background-color: #e75a7c;
   color: white;
   border-radius: 0.6em;
 }
